--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -18,6 +18,6 @@
     text-transform: uppercase
     text-decoration: none
     color: $primary
-    tranfrom: rotate(90deg)
+    transform: rotate(90deg)
 .title 
   margin: 0
