--- a/css/style.css
+++ b/css/style.css
@@ -435,6 +435,10 @@ template {
   max-width: 500px;
 }
 
+.hero__button {
+  margin-right: 20px;
+}
+
 .hero__instagram {
   position: absolute;
   left: 0;
