refact: make responsive layout for header and hero with pixel perfect

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -4,6 +4,10 @@
   .nav
     &__item
       margin-right: 1rem
+  .contacts
+    &__phone
+      margin-left: 0
+      margin-right: 2rem
 @media screen and ( max-width: 992px )
   .nav
     display: none
@@ -21,19 +25,24 @@
     &__button
       display: none
   .title 
-    font-size: 1.643rem
+    max-width: 23rem
+    font-size: 1.9rem
   .hero
     &__scroll-down
       display: none
     &__content
-      max-width: 22.857rem
+      width: 100%
     &__text
-      font-size: 1.287rem
+      max-width: 26.5rem
+      font-size: 1.5rem
       margin-bottom: 2.286rem
     &__button
       display: block
-      min-width: 22.857rem
+      width: 100%
+      min-width: 22.5rem
+      max-width: 27rem
       margin-bottom: 1.857rem
+      font-size: 1.1rem
 @media screen and ( max-height: 530px )
   .hero
     &__scroll-down
