--- a/css/style.css
+++ b/css/style.css
@@ -355,11 +355,12 @@ template {
 }
 
 .button {
-  padding: 13px 20px;
+  padding: 11px 24px;
   border: none;
   border-radius: 2px;
   text-transform: uppercase;
   font-size: 0.93rem;
+  font-family: 'Futura Demi', sans-serif;
 }
 
 .button:hover {
@@ -439,15 +440,17 @@ body {
 }
 
 .logo {
+  font-size: 1rem;
   color: #E3B873;
   text-transform: uppercase;
+  font-family: 'Futura Demi', sans-serif;
 }
 
 .nav__item {
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  margin-right: 2.857rem;
+  margin-right: 2.65rem;
   transition: color 0.2s;
 }
 
@@ -455,12 +458,21 @@ body {
   color: #E3B873;
 }
 
+.nav__item:last-child {
+  margin-right: 0;
+}
+
 .phone {
   color: #E3B873;
+  font-family: 'Futura Demi', sans-serif;
 }
 
 .contacts__phone {
-  margin-right: 45px;
+  margin-right: 3.25rem;
+}
+
+.contacts__button {
+  padding: 11px 21px;
 }
 
 .hero {
@@ -491,13 +503,22 @@ body {
   margin-left: 4.287rem;
 }
 
+.hero__title {
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
 .hero__text {
   font-size: 1.57rem;
   max-width: 500px;
+  line-height: 135%;
+  margin: 0;
+  margin-bottom: 3.3rem;
 }
 
 .hero__button {
-  margin-right: 20px;
+  margin-right: 1.286rem;
+  padding: 18px 26px;
 }
 
 .hero__instagram {
@@ -518,6 +539,8 @@ body {
   min-width: 17.643rem;
   min-height: 6.929rem;
   background-color: #131313;
+  font-family: 'Yeseva One', cursive;
+  font-size: 0.857rem;
   text-transform: uppercase;
   text-decoration: none;
   color: #ffffff;
@@ -530,7 +553,7 @@ body {
   height: 30px;
   border: 2px solid #E3B873;
   border-radius: 50%;
-  margin-left: 12px;
+  margin-left: 1.35rem;
 }
 
 .instagram {
@@ -545,9 +568,11 @@ body {
   align-items: center;
   text-transform: uppercase;
   text-decoration: none;
+  font-family: 'Futura Demi', sans-serif;
   color: #E3B873;
   transform: rotate(90deg);
   line-height: 0.8;
+  font-size: 1rem;
 }
 
 .instagram__link::after {
@@ -555,18 +580,22 @@ body {
   width: 50px;
   height: 1px;
   background-color: #E3B873;
-  margin-left: 8px;
+  margin-left: 1rem;
 }
 
 .title {
-  margin: 0;
   font-family: 'Yeseva One', cursive;
   text-transform: uppercase;
   font-size: 2.857rem;
+  line-height: 1.4;
 }
 
 .title--primary {
   color: #E3B873;
+}
+
+.button--outline {
+  padding: 18px 42px;
 }
 
 @media screen and (max-width: 1200px) {
@@ -575,6 +604,10 @@ body {
   }
   .nav__item {
     margin-right: 1rem;
+  }
+  .contacts__phone {
+    margin-left: 0;
+    margin-right: 2rem;
   }
 }
 
@@ -600,22 +633,27 @@ body {
     display: none;
   }
   .title {
-    font-size: 1.643rem;
+    max-width: 23rem;
+    font-size: 1.9rem;
   }
   .hero__scroll-down {
     display: none;
   }
   .hero__content {
-    max-width: 22.857rem;
+    width: 100%;
   }
   .hero__text {
-    font-size: 1.287rem;
+    max-width: 26.5rem;
+    font-size: 1.5rem;
     margin-bottom: 2.286rem;
   }
   .hero__button {
     display: block;
-    min-width: 22.857rem;
+    width: 100%;
+    min-width: 22.5rem;
+    max-width: 27rem;
     margin-bottom: 1.857rem;
+    font-size: 1.1rem;
   }
 }
 
