--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,9 +1,10 @@
 .button
-  padding: 13px 20px
+  padding: 11px 24px
   border: none
   border-radius: 2px
   text-transform: uppercase
   font-size: 0.93rem
+  font-family: 'Futura Demi', sans-serif
   &:hover
     cursor: pointer
   &--primary
