--- a/sass/templates/_header.sass
+++ b/sass/templates/_header.sass
@@ -11,19 +11,26 @@
   justify-content: space-between
   align-items: center
 .logo
+  font-size: 1rem
   color: $primary
   text-transform: uppercase
+  font-family: 'Futura Demi', sans-serif
 .nav
   &__item
     color: $light
     text-decoration: none
     text-transform: uppercase
-    margin-right: 2.857rem
+    margin-right: 2.65rem
     transition: color 0.2s
     &:hover
       color: $primary
+    &:last-child
+      margin-right: 0
 .phone
   color: $primary
+  font-family: 'Futura Demi', sans-serif
 .contacts
   &__phone
-    margin-right: 45px
+    margin-right: 3.25rem
+  &__button
+    padding: 11px 21px
