--- a/sass/templates/_hero.sass
+++ b/sass/templates/_hero.sass
@@ -20,11 +20,18 @@
     position: relative
     max-width: 47.857rem
     margin-left: 4.287rem
+  &__title
+    margin: 0
+    margin-bottom: 1rem
   &__text
     font-size: 1.57rem
     max-width: 500px
+    line-height: 135%
+    margin: 0
+    margin-bottom: 3.3rem
   &__button
-    margin-right: 20px
+    margin-right: 1.286rem
+    padding: 18px 26px
   &__instagram
     position: absolute
     left: 0
@@ -41,6 +48,8 @@
     min-width: 17.643rem
     min-height: 6.929rem
     background-color: $dark
+    font-family: 'Yeseva One', cursive
+    font-size: 0.857rem
     text-transform: uppercase
     text-decoration: none
     color: $light
@@ -51,7 +60,7 @@
       height: 30px
       border: 2px solid $primary
       border-radius: 50%
-      margin-left: 12px
+      margin-left: 1.35rem
 .instagram
   display: flex
   justify-content: center
@@ -62,19 +71,24 @@
     align-items: center
     text-transform: uppercase
     text-decoration: none
+    font-family: 'Futura Demi', sans-serif
     color: $primary
     transform: rotate(90deg)
     line-height: 0.8
+    font-size: 1rem
     &::after
       content: ''
       width: 50px
       height: 1px
       background-color: $primary
-      margin-left: 8px
+      margin-left: 1rem
 .title 
-  margin: 0
   font-family: 'Yeseva One', cursive
   text-transform: uppercase
   font-size: 2.857rem
+  line-height: 1.4
   &--primary
     color: $primary
+.button
+  &--outline
+    padding: 18px 42px
