refact: make responsive layout for header on desktop version and hero for mobile version

--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,7 @@ body {
   position: absolute;
   left: 0;
   top: 0;
-  max-width: 80px;
+  max-width: 84px;
   height: 100%;
 }
 
@@ -598,9 +598,32 @@ body {
   padding: 18px 42px;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (min-width: 1440px) {
+  .container {
+    width: 90%;
+    max-width: 1274px;
+  }
+  .contacts__phone {
+    margin-left: 1rem;
+    margin-right: 3rem;
+  }
+  .contacts__button {
+    margin-right: 1.35rem;
+  }
+}
+
+@media screen and (max-width: 1439px) {
+  .container {
+    width: 87%;
+  }
+}
+
+@media screen and (max-width: 1240px) {
   html {
     font-size: 12px;
+  }
+  .container {
+    width: 85%;
   }
   .nav__item {
     margin-right: 1rem;
@@ -624,6 +647,10 @@ body {
 }
 
 @media screen and (max-width: 570px) {
+  .container {
+    width: 100%;
+    max-width: 339px;
+  }
   .contacts__phone {
     margin-right: 0;
     color: #ffffff;
@@ -645,15 +672,18 @@ body {
   .hero__text {
     max-width: 26.5rem;
     font-size: 1.5rem;
-    margin-bottom: 2.286rem;
+    margin-bottom: 2.8rem;
   }
   .hero__button {
     display: block;
     width: 100%;
     min-width: 22.5rem;
-    max-width: 27rem;
-    margin-bottom: 1.857rem;
+    max-width: 28.5rem;
+    margin-bottom: 2.2rem;
     font-size: 1.1rem;
+  }
+  .button--outline {
+    padding: 17px 42px;
   }
 }
 
