feat: make section types and make adaptive for section types

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -26,6 +26,16 @@
       display: none
     &__content
       margin-left: 0
+@media screen and ( max-width: 760px )
+  .row
+    flex-direction: column
+    align-items: center
+  .types
+    &__card
+      margin-bottom: 4.917rem
+  .card
+    &__text
+      margin-left: 0
 @media screen and ( max-width: 570px )
   .container
     width: 90%
