--- a/css/style.css
+++ b/css/style.css
@@ -403,6 +403,14 @@ body {
   font-size: 1rem;
 }
 
+img {
+  max-width: 100%;
+}
+
+.section {
+  padding: 60px 0;
+}
+
 .section-title {
   text-align: center;
   text-transform: uppercase;
@@ -598,6 +606,58 @@ body {
   padding: 18px 42px;
 }
 
+.types__section-title {
+  margin-bottom: 2rem;
+}
+
+.row {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.col {
+  flex-basis: 32%;
+}
+
+.card__text {
+  position: relative;
+  max-width: 23.6rem;
+  margin: 0 auto;
+  margin-top: -9.3rem;
+  background-color: #ffffff;
+  padding: 1.79rem 2.14rem;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.03);
+}
+
+.card__title {
+  font-family: 'Yeseva One', cursive;
+  font-size: 1.29rem;
+  margin-top: 0;
+  margin-bottom: 0.7rem;
+}
+
+.card__list {
+  padding: 0 0 0 1rem;
+  margin: 0;
+  font-size: 1.07rem;
+  line-height: 1.786rem;
+  color: #959595;
+  margin-bottom: 2.5rem;
+}
+
+.card__pricetag {
+  position: absolute;
+  left: 0;
+  bottom: -1.786rem;
+  font-size: 1.29rem;
+  font-family: 'Yeseva One', cursive;
+  text-transform: uppercase;
+  background-color: #E3B873;
+  color: #ffffff;
+  padding: 1.214rem 2.6rem;
+}
+
 @media screen and (min-width: 1440px) {
   .container {
     width: 90%;
@@ -633,6 +693,19 @@ body {
     display: none;
   }
   .hero__content {
+    margin-left: 0;
+  }
+}
+
+@media screen and (max-width: 760px) {
+  .row {
+    flex-direction: column;
+    align-items: center;
+  }
+  .types__card {
+    margin-bottom: 4.917rem;
+  }
+  .card__text {
     margin-left: 0;
   }
 }
