--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -13,6 +13,8 @@ img
     text-align: center
     text-transform: uppercase
     font-family: 'Yeseva One', cursive
+    &__heading
+      font-size: 1.429rem
     &__image
       display: flex
       align-items: center
@@ -23,3 +25,12 @@ img
         height: 2px
         background-color: $primary
         margin: 0 10px
+    &__text
+      display: inline-block
+      max-width: 53.571rem
+      margin: 1.3rem 0 3.22rem 0
+      text-align: center
+      font-family: 'Futura Book', sans-serif
+      font-size: 1.429rem
+      line-height: 1.929rem
+      text-transform: none
