--- a/sass/templates/_types.sass
+++ b/sass/templates/_types.sass
@@ -25,7 +25,7 @@
     padding: 0 0 0 1rem
     margin: 0
     font-size: 1.07rem
-    line-height: 1.786rem
+    line-height: 1.82rem
     color: $secondary
     margin-bottom: 2.5rem
   &__pricetag
@@ -38,5 +38,6 @@
     background-color: $primary
     color: $light
     padding: 1.214rem 2.6rem
+    box-shadow: 5px 5px 10px rgba(227, 184, 115, 0.1)
 
   
