--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -18,3 +18,41 @@
     border: 1px solid $light
     background-color: transparent
     color: $light
+  &--size-lg
+    padding: 1.35rem 3.3rem
+.label
+  font-size: 1.07rem
+  line-height: 1.429rem
+  &--light
+    color: rgba($light, 0.5)
+.input
+  background-color: transparent
+  border: none
+  border-bottom: 1px solid rgba(54, 54, 54, 0.3);
+  font-size: 1.286rem
+  line-height: 1.786rem
+  color: $light
+  padding: 0 0 0.5rem 0
+  &::placeholder
+    color: $light
+.policy
+  font-size: 1.143rem
+  &__checkbox
+    opacity: 0
+    visibility: hidden
+    &:checked +
+      .policy__label
+        &::before
+          background: $primary url('../img/check.svg') no-repeat center / 0.75rem
+  &__label
+    display: flex
+    align-items: center
+    &::before
+      content: ''
+      width: 18px
+      height: 18px
+      border: 1px solid $primary
+      border-radius: 1px
+      cursor: pointer
+      margin-right: 0.571rem
+
