--- a/css/style.css
+++ b/css/style.css
@@ -455,6 +455,38 @@ template {
   margin-right: 0.571rem;
 }
 
+.button-up {
+  opacity: 0;
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  right: 0;
+  bottom: 0;
+  margin-right: 2rem;
+  margin-bottom: 1.5rem;
+  background-color: transparent;
+  border: none;
+  font-family: 'Yeseva One', cursive;
+  font-size: 0.9rem;
+  text-transform: uppercase;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  color: #E3B873;
+}
+
+.button-up::after {
+  content: '';
+  background: url("../img/arrow-down.svg") no-repeat center;
+  transform: rotate(180deg);
+  width: 30px;
+  height: 30px;
+  border: 2px solid #E3B873;
+  border-radius: 50%;
+  margin-left: 1rem;
+}
+
 .container {
   width: 85%;
   max-width: 1256px;
