--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -2,3 +2,20 @@
   width: 85%
   max-width: 1256px
   margin: auto
+.row 
+  display: flex
+  align-items: flex-start
+  justify-content: space-between
+  &--center
+    align-items: center
+.col
+  &-30
+  flex-basis: 32%
+  &-40
+    width: 40%
+    &--left
+      padding-left: 0.8rem
+  &-60
+    width: 60%
+    &--top
+      padding-top: 0.2rem
