--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -18,7 +18,13 @@
     &__phone
       margin-left: 0
       margin-right: 2rem
+  .swiper
+    &-slide
+      &__heading
+        font-size: 1rem
 @media screen and ( max-width: 992px )
+  html
+    font-size: 11px
   .nav
     display: none
   .hero
@@ -26,10 +32,43 @@
       display: none
     &__content
       margin-left: 0
+  .projects
+    &__text
+      max-width: 24.18rem
+      margin-bottom: 1.8rem
+      margin-right: 0.5rem
+  .swiper
+    &-slide
+      &__text
+        margin-bottom: 1.2rem
+        &:last-of-type
+          margin-bottom: 3.2rem
+  .card
+    &__title
+      max-width: 14.55rem
 @media screen and ( max-width: 760px )
   .row
     flex-direction: column
     align-items: center
+  .col
+    &-40
+      width: 50%
+  .section
+    &-title
+      &__heading
+        text-align: center
+      &__text
+        text-align: center
+      &__word
+        justify-content: center
+        &::after
+          display: none
+  .projects
+    &__text
+      max-width: 35rem
+  .swiper
+    &-slide
+      flex-basis: 90%
   .types
     &__card
       margin-bottom: 5rem
@@ -42,14 +81,11 @@
       color: $light
     &__text
       color: $light
+      max-width: 300px
+      font-size: 1.25rem
+      line-height: 135.84%
     &__card
       margin-bottom: 5rem
-  .section
-    &-title
-      &__text
-        max-width: 300px
-        font-size: 1.25rem
-        line-height: 135.84%
 @media screen and ( max-width: 570px )
   .container
     width: 90%
@@ -88,8 +124,6 @@
         font-size: 1.85rem
       &__image
         margin-bottom: 3.1rem
-      &__text
-        margin-bottom: 3.1rem
   .card
     &__text
       max-width: 22.4rem
@@ -113,6 +147,8 @@
       margin-bottom: 0.3rem
     &__card
       margin-bottom: 6.8rem
+    &__text
+      margin-bottom: 3.1rem
     &-card
       &__text
         padding: 1.75rem 2.4rem
