--- a/sass/templates/_design.sass
+++ b/sass/templates/_design.sass
@@ -17,6 +17,13 @@
     position: relative
   &__card
     position: relative
+  &__text
+    display: inline-block
+    max-width: 53.571rem
+    margin: 1.3rem 0 3.22rem 0
+    text-align: center
+    font-size: 1.429rem
+    line-height: 1.929rem
   
   
 
