--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -27,6 +27,12 @@
       line-height: 1.2rem
       &--margin
         margin-bottom: 0.3rem
+    &-img
+      // width: 48.5rem
+      // height: 34.429rem
+      // background: url('../img/project/project.jpg') no-repeat
+      &-mobile
+        display: none
   &-pagination
     &-bullet
       width: 10px
@@ -52,6 +58,12 @@
     width: auto
     bottom: -1.05px
 .projects
+  &__row
+    min-height: 35rem
+    max-height: 40rem
+    flex-direction: column
+    flex-wrap: wrap
+    justify-content: center
   &__title
     font-size: 1.929rem
     line-height: 2.643rem
