--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,7 +8,7 @@
       // margin-right: 3rem
     // &__button
     //   margin-right: 1.35rem
-@media screen and ( max-width: 1240px )
+@media screen and ( max-width: 1270px )
   html
     font-size: 12px
   .nav
@@ -22,6 +22,10 @@
     &-slide
       &__heading
         font-size: 1rem
+      &__text
+        margin-bottom: 1.8rem
+        &:last-of-type
+          margin-bottom: 6rem
 @media screen and ( max-width: 992px )
   html
     font-size: 11px
@@ -42,7 +46,7 @@
       &__text
         margin-bottom: 1.2rem
         &:last-of-type
-          margin-bottom: 3.2rem
+          margin-bottom: 3rem
   .card
     &__title
       max-width: 14.55rem
@@ -52,7 +56,59 @@
     align-items: center
   .col
     &-40
-      width: 50%
+      width: 100%
+      &--left
+        padding: 0
+    &-60
+      width: 100%
+  .swiper
+    &-button
+      &-prev     
+        left: 25%
+    &-slide
+      flex-basis: 100%
+      &-img
+        img
+          max-height: 25rem
+      &--right
+        padding: 0
+        justify-content: center
+      &__text
+        flex-basis: 47.5%
+        width: 50%
+        margin-bottom: 2.2rem
+        &:nth-child(-n+2)
+          margin-top: 2.763rem
+        &:last-of-type
+          margin-bottom: 4.65rem
+      &__heading
+        font-size: 1.166rem
+        line-height: 1.583rem
+        margin-bottom: 0.916rem
+      &__value
+        font-size: 1.166rem
+        line-height: 1.583rem
+    &-container
+      &--mobile
+        max-width: 35.5rem
+  .projects
+    &__row
+      flex-wrap: nowrap
+      min-height: 54.083rem
+    &__col-40
+      &--order
+        order: 1
+    &__title
+      font-size: 1.833rem
+      line-height: 2.5rem
+      letter-spacing: -0.07em
+      margin-bottom: 2rem
+    &__text
+      margin: 0 auto
+      font-size: 1.166rem
+      line-height: 1.917rem
+      margin-bottom: 2.85rem
+      max-width: 35rem
   .section
     &-title
       &__heading
@@ -63,12 +119,6 @@
         justify-content: center
         &::after
           display: none
-  .projects
-    &__text
-      max-width: 35rem
-  .swiper
-    &-slide
-      flex-basis: 90%
   .types
     &__card
       margin-bottom: 5rem
@@ -86,7 +136,14 @@
       line-height: 135.84%
     &__card
       margin-bottom: 5rem
+  .button
+    &-up
+      display: none
+      &::after
+        display: none
 @media screen and ( max-width: 570px )
+  html
+    font-size: 12px
   .container
     width: 90%
   .contacts
@@ -124,6 +181,24 @@
         font-size: 1.85rem
       &__image
         margin-bottom: 3.1rem
+  .swiper
+    &-button
+      &-prev     
+        left: 20%
+    &-slide
+      &-img
+        display: none
+        &-mobile
+          display: flex
+    &-container
+      &--mobile
+        max-width: 28.5rem
+  .projects
+    &__title
+      margin-bottom: 1.9rem
+    &__text
+      margin-bottom: 2.8rem
+      max-width: 25.3rem
   .card
     &__text
       max-width: 22.4rem
@@ -152,6 +227,11 @@
     &-card
       &__text
         padding: 1.75rem 2.4rem
+@media screen and ( max-width: 320px )
+  .swiper
+    &-button
+      &-prev     
+        left: 12.5%
 @media screen and ( max-height: 530px )
   .hero
     &__scroll-down
