--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -16,12 +16,15 @@ img
     text-align: center
     &--left
       text-align: left
+    &--light
+      color: $light
     &__heading
       font-family: 'Yeseva One', cursive
       text-transform: uppercase
       font-size: 1.429rem
       line-height: 138.6%
       margin: 0
+      margin-bottom: 1rem
       &--primary
         color: $primary
     &__word
@@ -41,10 +44,11 @@ img
       display: flex
       align-items: center
       justify-content: center
+      img
+        margin: 0 10px
       &::before, &::after
         content: ''
         width: 32px
         height: 2px
         background-color: $primary
-        margin: 0 10px
       
