--- a/sass/templates/_projects.sass
+++ b/sass/templates/_projects.sass
@@ -26,11 +26,8 @@
       font-size: 1.071rem
       line-height: 1.2rem
       &--margin
-        margin-bottom: 0.3rem
+        margin-top: 0.3rem
     &-img
-      // width: 48.5rem
-      // height: 34.429rem
-      // background: url('../img/project/project.jpg') no-repeat
       &-mobile
         display: none
   &-pagination
@@ -58,6 +55,7 @@
     width: auto
     bottom: -1.05px
 .projects
+  padding-bottom: 29.5rem
   &__row
     min-height: 35rem
     max-height: 40rem
